--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,49 @@
-gyp==0.1
+blinker==1.3
+boto3==1.9.215
+botocore==1.12.215
+chardet==2.3.0
+Click==7.0
+cloud-init==17.2
+command-not-found==0.3
+configobj==5.0.6
+cryptography==1.2.3
+docutils==0.15.2
+Flask==1.1.1
+Flask-Cors==3.0.8
+Flask-Ext==0.1
+Flask-SocketIO==4.2.1
+hibagent==1.0.1
+idna==2.0
+itsdangerous==1.1.0
+Jinja2==2.10.1
+jmespath==0.9.4
+jsonpatch==1.10
+jsonpointer==1.9
+language-selector==0.1
+MarkupSafe==1.1.1
+money-parser==0.0.1
+netifaces==0.10.6
+numpy==1.17.0
+oauthlib==1.0.3
+opencv-python==4.1.0.25
+prettytable==0.7.2
+pyasn1==0.1.9
+pycurl==7.43.0
+pygobject==3.20.0
+PyJWT==1.3.0
+pyserial==3.0.1
+python-apt==1.1.0b1+ubuntu0.16.4.1
+python-dateutil==2.8.0
+python-debian==0.1.27
+python-engineio==3.9.3
+python-socketio==4.3.1
+python-systemd==231
+PyYAML==3.11
+requests==2.9.1
+s3transfer==0.2.1
+six==1.12.0
+ssh-import-id==5.5
+ufw==0.35
+unattended-upgrades==0.1
+urllib3==1.25.3
+Werkzeug==0.15.5
